--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
 1. lifecycle : create + destroy => specify listeners => constructor CDI listeners and many others
 
 2. bean type/scope : http request / http session / application / conversation scope
+
+3. aop cu markere
